--- a/css/components/modal.css
+++ b/css/components/modal.css
@@ -34,6 +34,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  
+  padding: 7px 0;
 }
 
 .modal--header , 
@@ -49,6 +51,7 @@
 .modal--header {
   justify-content: center;
   align-items: center;
+  text-align: center;
   border-width: 0 0 1px 0;
   font-size: 1.5em;
 }
